# copyvec

./: Cargo.toml  README.md
src/: _quickcheck1.rs  _serde1.rs  lib.rs
