[package]
name = "copyvec"
version = "0.1.2"
edition = "2021"
description = "A contiguous growable array type, with a fixed, stack-alllocated capacity that implements Copy."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/copyvec"
repository = "https://github.com/aatifsyed/copyvec"
homepage = "https://crates.io/crates/copyvec"
categories = [
    "rust-patterns",
    "no-std::no-alloc",
    "no-std",
    "memory-management",
    "data-structures",
]

[dependencies]
quickcheck1 = { package = "quickcheck", version = "1.0.3", optional = true, default-features = false }
serde1 = { version = "1.0.204", package = "serde", default-features = false, optional = true }

[features]
alloc = []
default = ["std"]
std = ["alloc"]
quickcheck = ["quickcheck1"]
quickcheck1 = ["dep:quickcheck1"]
serde = ["serde1"]
serde1 = ["dep:serde1"]

[dev-dependencies]
